# AWARE

./: .gitignore  CMakeLists.txt  README.md  main.cpp
dataset/: abalone.csv  car.csv  credit.csv  ecoli.csv  forest.csv  glass.csv  hcv.csv  image.csv  immuno.csv  letter.csv  liver.csv  nursery.csv  parkinsons.csv  shuttle.csv  thoraric.csv  tic-tac-toe.csv  wilt.csv  yeast.csv
include/: AWARE.h  CART.h  RF.h
include/base/: RF.h
include/base/utils/: Dataset.h  Matrix.h  Metric.h
include/etc/: TWRF.h
include/utils/: Dataset.h  Matrix.h  Metric.h
src/: AWARE.cpp  AWARE.h
src/base/: CART.cpp  RF.cpp  RF.h
src/base/utils/: Dataset.cpp  Matrix.cpp  Metric.cpp
src/etc/: BTA.cpp  BTA.h  DIRF.cpp  DIRF.h  TWRF.cpp  TWRF.h  WAVE.cpp  WAVE.h
src/utils/: Dataset.cpp  Matrix.cpp  Metric.h
